changed order of compiler options to so use of later version of cmake can compile the test app

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+c/c++ mock framework. Overwrites the the function in execution blocks of memory 
+
+
 to install execute `make; sudo make install`
 
 
