--- a/README
+++ b/README
@@ -1,28 +1,20 @@
 c/c++ mock framework. Overwrites the the function in execution blocks of memory 
 
+Instalation requires cmake 
 
-to install execute `make; sudo make install`
-
-
-to build execute `sudo make -f Makefile32 install ` for ia32 build or `sudo make -f Makefile64 install` for ia64 build
-
-to build the system default, you can just execute 'sudo make install'
+cmake .
+make install
 
 
-on ubuntu you may need to install for ia32 build on 64 bit platform:
 
- sudo apt-get install ia32-libs
- sudo apt-get install libc6-dev-i386
+to clear all mocks, call unmock_all();
 
 
-for examples of how to use to mock a function see test.c 
-to use this add to your compile commandline `pkg-config ExtremeCUnit --cflags` and to the link command line `pkg-config ExtremeCUnit --libs`
-
-to build and run the test app, you need to install my ExtremeCUnit testing framework https://github.com/acgreek/ExtremeCUnit, then in this directory, execute 'make run', if you see no errors all tests passed. To version status of each test execute dist/test -v
+to build and run the test app, you need to install my ExtremeCUnit testing framework https://github.com/acgreek/ExtremeCUnit. then you will need to run 'cmake .' again to so that it finds the newly installed library 
 
 
 EXAMPLE 
-Say you have some library that function you want to test and it call the libc function 'time_t time(time_t * t)'. That is going to return current time which is not necessarily going to be consistent in your test. So here is is an example of how to mock the time function. It works even when some library you are linking with calls the time function
+Say you have some library that function you want to test and it calls the libc function 'time_t time(time_t * t)'. That is going to return current time which is not necessarily going to be consistent in your test. So here is an example of how to mock the time function. It works even when some library you are linking with calls the time function
 
 source for mock_time.c :
 ..
